feature/library-and-rate-limit-fixes (#1)
* Documentation added for model.

* Added documentation for bar model.  Added more infomarion logging for debugging rate limit issues.  Found Dukascopy has changed its rate limiting behaviour to include 30s data delays if you go hit too hard.  1.0/s gives consistent results.

* Update code for latest build system and java versions.

* Played with permit size of 2.0 and caused 30s rate limiting.  Left at 1.0.  Updated loging of file sizes to just be integer KB.  Files of size 0 are stored to reduce hits to Dukascopy.

* Added more documentation

* Update copyright.

* Fix branch version