@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2024 Lime Mojito Pty Ltd
+ * Copyright 2011-2025 Lime Mojito Pty Ltd
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -20,15 +20,15 @@ package com.limemojito.trading.model.tick.dukascopy.cache;
 import com.google.common.util.concurrent.RateLimiter;
 import com.limemojito.trading.model.tick.dukascopy.DukascopyCache;
 import com.limemojito.trading.model.tick.dukascopy.DukascopyTickSearch;
+import jakarta.validation.Validator;
 import lombok.RequiredArgsConstructor;
 import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
 
-import jakarta.validation.Validator;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static com.google.common.util.concurrent.RateLimiter.create;
@@ -44,13 +44,13 @@ import static java.lang.System.getProperty;
 @SuppressWarnings("UnstableApiUsage")
 public class DirectDukascopyNoCache implements DukascopyCache {
     /**
-     * Defaults to 10.00ps which plays nicely with Dukascopy. Otherwise, they simply stop responding (500) if you hit the
-     * servers too hard.
+     * Defaults to 1.0 ps which plays nicely with Dukascopy. Otherwise, they simply stop responding (50X) if you hit the
+     * servers too hard, or they do a sneaky 30s delay before data is returned.  This has a LONG timeout if it occurs.
      */
     public static final String PROP_PERMITS = DirectDukascopyNoCache.class.getPackageName() + ".permits";
 
     /**
-     * Defaults to 2.0 s to pause if a server 500 is encountered.  This may indicate that we are over rate.
+     * Defaults to 30.0 s to pause if server 500 is encountered.  This may indicate that we are over rate.
      * Exponential back-off over the number of retries.
      *
      * @see #PROP_RETRY_COUNT
@@ -65,13 +65,18 @@ public class DirectDukascopyNoCache implements DukascopyCache {
     public static final String PROP_RETRY_COUNT = DirectDukascopyNoCache.class.getPackageName() + ".retryCount";
 
     /**
-     * Defaults to <a href="https://datafeed.dukascopy.com/datafeed/">...</a> which plays nicely with Dukascopy.  Otherwise, they simply stop
+     * Defaults to <a href="https://datafeed.dukascopy.com/datafeed/">...</a> which plays nicely with Dukascopy.
+     * Otherwise, they delay data requests by at least 30s before they start
      * responding if you hit the servers too hard.  Note the slash on the end is required.
      */
     public static final String PROP_URL = DirectDukascopyNoCache.class.getPackageName() + ".url";
 
-    private static final double PERMITS_PER_SECOND = parseDouble(getProperty(PROP_PERMITS, "10"));
-    private static final double PAUSE_SECONDS = parseDouble(getProperty(PROP_RETRY, "1.0"));
+    /**
+     * 2025/11/10 Note higher than 1.0 produces back-offs and then 30s delays
+     */
+    private static final double PERMITS_PER_SECOND = parseDouble(getProperty(PROP_PERMITS, "1.0"));
+
+    private static final double PAUSE_SECONDS = parseDouble(getProperty(PROP_RETRY, "30.0"));
     private static final int RETRY_COUNT = parseInt(getProperty(PROP_RETRY_COUNT, "3"));
     private static final RateLimiter RATE_LIMITER = create(PERMITS_PER_SECOND);
     private static final String DUKASCOPY_URL = getProperty(PROP_URL, "https://datafeed.dukascopy.com/datafeed/");
@@ -79,39 +84,70 @@ public class DirectDukascopyNoCache implements DukascopyCache {
     private final AtomicInteger retryCounter = new AtomicInteger();
     private final AtomicInteger retrievePathCounter = new AtomicInteger();
 
+    /**
+     * Open a buffered stream to the Dukascopy resource identified by the path, honoring the rate limiter
+     * and retry policy for transient server errors.
+     *
+     * @param dukascopyPath path relative to the Dukascopy data root
+     * @return buffered input stream to the remote resource
+     * @throws IOException if the resource cannot be retrieved
+     */
     @Override
     public InputStream stream(String dukascopyPath) throws IOException {
         final DataSource url = new UrlDataSource(DUKASCOPY_URL + dukascopyPath);
         // play nice with Dukascopy's free data.  And if you don't they stop sending data.
         BufferedInputStream stream = fetchWithRetry(url, 1);
+        log.debug("Stream Retrieved from {}", url);
         retrievePathCounter.incrementAndGet();
         return stream;
     }
 
+    /**
+     * Number of successful remote resource retrievals performed in this process.
+     */
     @Override
     public int getRetrieveCount() {
         return retrievePathCounter.get();
     }
 
+    /**
+     * Cache hits are always zero for the no-cache implementation.
+     */
     @Override
     public int getHitCount() {
         return 0;
     }
 
+    /**
+     * Cache misses equal the number of retrievals for the no-cache implementation.
+     */
     @Override
     public int getMissCount() {
         return getRetrieveCount();
     }
 
+    /**
+     * Number of retry attempts made due to server errors.
+     */
     public int getRetryCount() {
         return retryCounter.get();
     }
 
+    /**
+     * Human-readable summary of cache activity including retrievals and retries.
+     */
     @Override
     public String cacheStats() {
         return String.format("DirectDukascopyNoCache: %d retrieve(s) %d retry(s)", getRetrieveCount(), getRetryCount());
     }
 
+    /**
+     * Create a bar cache that does no caching and loads directly from Dukascopy.
+     *
+     * @param validator  bean validator for bar data
+     * @param tickSearch provider capable of locating Dukascopy bar files
+     * @return a bar cache implementation without caching
+     */
     @Override
     public BarCache createBarCache(Validator validator, DukascopyTickSearch tickSearch) {
         return new DirectDukascopyBarNoCache(validator, tickSearch);
@@ -131,7 +167,7 @@ public class DirectDukascopyNoCache implements DukascopyCache {
 
         @Override
         public InputStream openStream() throws IOException {
-            return new URL(url).openStream();
+            return URI.create(url).toURL().openStream();
         }
 
         public String toString() {
@@ -150,6 +186,7 @@ public class DirectDukascopyNoCache implements DukascopyCache {
     BufferedInputStream fetchWithRetry(DataSource url, int callCount) throws IOException {
         try {
             // keep the rate limit here as extra insurance during retries
+            log.debug("Rate limit: {}/s attempt acquire", RATE_LIMITER.getRate());
             final double waited = RATE_LIMITER.acquire();
             log.info("Loading from {}, waited {}s", url, waited);
             return new BufferedInputStream(url.openStream(), IO_BUFFER_SIZE);
@@ -168,7 +205,7 @@ public class DirectDukascopyNoCache implements DukascopyCache {
         final double pauseSeconds = PAUSE_SECONDS * callCount;
         try {
             log.info("Dukascopy server error: {}", e.getMessage());
-            log.warn("pausing for {} to retry", pauseSeconds);
+            log.warn("pausing for {}s to retry", pauseSeconds);
             final double toMilliseconds = 1000.0;
             Thread.sleep((long) (pauseSeconds * toMilliseconds));
         } catch (InterruptedException ex) {
